--- a/publications.bib
+++ b/publications.bib
@@ -98,3 +98,13 @@ location = {Gifu, Japan}
       primaryClass={q-fin.ST},
       url={https://arxiv.org/abs/2308.04947}, 
 }
+
+@misc{prune-then-finetune,
+      title={Less is More: Unlocking Specialization of Time Series Foundation Models via Structured Pruning}, 
+      author={Lifan Zhao and Yanyan Shen and Zhaoyang Liu and Xue Wang and Jiaji Deng},
+      year={2025},
+      eprint={2505.23195},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2505.23195}, 
+}
