--- a/publications.bib
+++ b/publications.bib
@@ -99,12 +99,12 @@ location = {Gifu, Japan}
       url={https://arxiv.org/abs/2308.04947}, 
 }
 
-@misc{prune-then-finetune,
+@inproceedings{prune-then-finetune,
       title={Less is More: Unlocking Specialization of Time Series Foundation Models via Structured Pruning}, 
       author={Lifan Zhao and Yanyan Shen and Zhaoyang Liu and Xue Wang and Jiaji Deng},
       year={2025},
       eprint={2505.23195},
-      archivePrefix={arXiv},
-      primaryClass={cs.LG},
       url={https://arxiv.org/abs/2505.23195}, 
+      booktitle={The Thirty-ninth Annual Conference on Neural Information Processing Systems},
+      year={2025},
 }
